--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+@media only screen and (min-width: 991px) {
+  .page-container {
+    min-height: 100vh;
+    padding-bottom: 90px;
+}
+}
