--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -26,9 +26,9 @@
           <a routerLink="/portfolio">Portfolio</a>
         </li>
 
-        <li class="menu-item" routerLinkActive="current-menu-item">
+        <!-- <li class="menu-item" routerLinkActive="current-menu-item">
           <a routerLink="/blog">Blog</a>
-        </li>
+        </li> -->
 
         <li class="menu-item" routerLinkActive="current-menu-item">
           <a routerLink="/contact">Contact</a>
