--- a/frontend/src/app/contact/contact.component.html
+++ b/frontend/src/app/contact/contact.component.html
@@ -40,7 +40,7 @@
                   <i class="linecons linecons-mail"></i>
                 </div>
                 <div class="ci-text">
-                  <h4>eyob@zede.tech</h4>
+                  <h4>hello@eyob.tech</h4>
                   <p>Duis erat leo, aliquam laoreet fringilla quis, pretium vitae dui.</p>
                 </div>
               </div>
