Change assets directory to be relative

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,7 +7,7 @@
             <div class="row">
               <div class="col-sm-12 col-md-6 col-lg-6">
                 <div class="inner-content">
-                  <div class="fill-block" style="background-image: url(/assets/img/cover.jpg);"></div>
+                  <div class="fill-block" style="background-image: url(./assets/img/cover.jpg);"></div>
                 </div>
               </div>
               <div class="col-sm-12 col-md-6 col-lg-6">
