--- a/src/app/about/subscription/subscription.component.html
+++ b/src/app/about/subscription/subscription.component.html
@@ -1,6 +1,6 @@
 <div class="subscription-block mt-3">
   <h2 class="text-center">Subscribe Now</h2>
-  <p class="text-center subtitle text-muted">Be the first to receive my latest posts &amp; special offers.</p>
+  <p class="text-center subtitle text-muted">Be the first to receive my latest posts &amp; offers.</p>
   <form #subscriptionForm="ngForm" (ngSubmit)="onSubmit()">
     <div class="input-group mb-0">
       <input
