--- a/src/app/shared/skill-bar/skill-bar.component.html
+++ b/src/app/shared/skill-bar/skill-bar.component.html
@@ -1,4 +1,4 @@
-<div class="skills-info skills-first-style">
+<div class="skills-info skills-first-style skill-bar">
   <div class="clearfix">
     <h4>{{ skill.title }}</h4>
     <div class="skill-value">{{ skill.score }}%</div>
