--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,7 +15,7 @@
                   <div class="hp-text-block">
                     <div class="sp-subtitle">Full-Stack Developer</div>
                     <h2 class="hp-main-title">Eyob Tariku</h2>
-                    <p>Fusce tempor magna mi, non egestas velit ultricies nec. Aenean convallis, risus non condimentum gravida, odio mauris ullamcorper felis, ut venenatis purus ex eu mi. Quisque imperdiet lacinia urna, a placerat sapien pretium eu.</p>
+                    <p>I am a full-stack web application developer &amp; DevOps Engineer. I build modern single page applications (SPA) using <mark>Angular 2+</mark>, RESTful API services using <mark>Django</mark>, and delploy them on a <mark>Cloud</mark> provider of your choosing.</p>
 
                     <div class="hp-buttons">
                       <a (click)="downloadResume()" class="btn btn-primary">Download CV</a>
@@ -42,22 +42,23 @@
             <div class="info-list-w-icon">
               <div class="info-block-w-icon">
                 <div class="ci-icon">
-                  <i class="linecons linecons-pen"></i>
+                  <!-- <i class="linecons linecons-display"></i> -->
+                  <i class="fas fa-laptop-code"></i>
                 </div>
 
                 <div class="ci-text">
-                  <h4>Copywrite</h4>
+                  <h4>Web Applications</h4>
                   <p>Mauris neque libero, aliquet vel mollis nec, euismod sed tellus. Mauris convallis dictum elit id volutpat. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt turpis turpis tempus ex.</p>
                 </div>
               </div>
 
               <div class="info-block-w-icon">
                 <div class="ci-icon">
-                  <i class="linecons linecons-display"></i>
+                  <i class="linecons linecons-params"></i>
                 </div>
 
                 <div class="ci-text">
-                  <h4>Web Design</h4>
+                  <h4>RESTful API</h4>
                   <p>Mauris neque libero, aliquet vel mollis nec, euismod sed tellus. Mauris convallis dictum elit id volutpat. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt turpis turpis tempus ex.</p>
                 </div>
               </div>
@@ -69,22 +70,22 @@
 
               <div class="info-block-w-icon">
                 <div class="ci-icon">
-                  <i class="linecons linecons-shop"></i>
+                  <i class="fas fa-server"></i>
                 </div>
 
                 <div class="ci-text">
-                  <h4>Ecommerce</h4>
+                  <h4>Cloud Computing</h4>
                   <p>Mauris neque libero, aliquet vel mollis nec, euismod sed tellus. Mauris convallis dictum elit id volutpat. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt turpis turpis tempus ex.</p>
                 </div>
               </div>
 
               <div class="info-block-w-icon">
                 <div class="ci-icon">
-                  <i class="linecons linecons-megaphone"></i>
+                  <i class="fas fa-code-branch"></i>
                 </div>
 
                 <div class="ci-text">
-                  <h4>Marketing</h4>
+                  <h4>DevOps</h4>
                   <p>Mauris neque libero, aliquet vel mollis nec, euismod sed tellus. Mauris convallis dictum elit id volutpat. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt turpis turpis tempus ex.</p>
                 </div>
               </div>
