--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -1,5 +1,5 @@
 .fill-block {
-  min-height: 550px !important;
+  min-height: 480px !important;
   border-radius: 10px;
   background-image: url("/assets/img/cover.jpg");
 }
@@ -34,6 +34,10 @@ mark {
 }
 
 @media(max-width: 576px) {
+  .fill-block {
+    background-image: url("/assets/img/mobile-cover.jpg");
+  }
+
   .featured-skills-col {
     border-right: none;
   }
