Covert the base href link to routerLink

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -4,7 +4,7 @@
 
     <!-- Text Logo -->
     <div class="text-logo">
-      <a href="index.html">
+      <a routerLink="/">
         <div class="logo-symbol">E</div>
         <div class="logo-text">Eyob <span>Tariku</span></div>
       </a>
