--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -15,7 +15,7 @@
                   <div class="hp-text-block">
                     <div class="sp-subtitle">Full-Stack Developer</div>
                     <h2 class="hp-main-title">Eyob Tariku</h2>
-                    <p>I am a full-stack web application developer &amp; DevOps Engineer. I build modern single page applications (SPA) using <mark>Angular 2+</mark>, RESTful API services using <mark>Django</mark>, and delploy them on a <mark>Cloud</mark> provider of your choosing.</p>
+                    <p>I am a full-stack web application developer &amp; DevOps Engineer. I build modern single-page applications (SPA) using <mark>Angular 2+</mark>, RESTful API services using <mark>Django</mark> and deploy them on a <mark>Cloud</mark> provider of your choosing.</p>
 
                     <div class="hp-buttons">
                       <a (click)="downloadResume()" class="btn btn-primary">Download CV</a>
@@ -47,8 +47,8 @@
                 </div>
 
                 <div class="ci-text">
-                  <h4>Web Applications</h4>
-                  <p>Mauris neque libero, aliquet vel mollis nec, euismod sed tellus. Mauris convallis dictum elit id volutpat. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt turpis turpis tempus ex.</p>
+                  <h4>Web Application</h4>
+                  <p>I deliver modern web applications such as e-commerce sites, single-page web applications (SPA) & SaaS applications using Angular & TypeScript. The applications are guaranteed to be beautiful, user-friendly, and follow the latest best practices.</p>
                 </div>
               </div>
 
@@ -59,7 +59,7 @@
 
                 <div class="ci-text">
                   <h4>RESTful API</h4>
-                  <p>Mauris neque libero, aliquet vel mollis nec, euismod sed tellus. Mauris convallis dictum elit id volutpat. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt turpis turpis tempus ex.</p>
+                  <p>I build clean & well-structured RESTful APIs using Python, Django & Flask. My APIs are well-documented in accordance to the OpenAPI 2.0 specification and implement automated tests with a test coverage of at least 80%.</p>
                 </div>
               </div>
             </div>
@@ -75,7 +75,7 @@
 
                 <div class="ci-text">
                   <h4>Cloud Computing</h4>
-                  <p>Mauris neque libero, aliquet vel mollis nec, euismod sed tellus. Mauris convallis dictum elit id volutpat. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt turpis turpis tempus ex.</p>
+                  <p>I deploy web applications and API services to a cloud infrastructure such as Digital Ocean, GCP, AWS, or Heroku. By using sensible configurations, I ensure your deployed applications are stable, accessible & easily scalable.</p>
                 </div>
               </div>
 
@@ -86,7 +86,7 @@
 
                 <div class="ci-text">
                   <h4>DevOps</h4>
-                  <p>Mauris neque libero, aliquet vel mollis nec, euismod sed tellus. Mauris convallis dictum elit id volutpat. Vivamus blandit, dolor vitae lacinia maximus, risus velit vehicula odio, a tincidunt turpis turpis tempus ex.</p>
+                  <p>To facilitate Agile software development, I setup a CI/CD pipeline using automation & continuous integration tools to reduce the time spent between development & production. These tools include GitLab, Ansible, Docker Travis CI, and Circle CI.</p>
                 </div>
               </div>
             </div>
