--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -21,7 +21,7 @@
                 </div>
                 <div class="ci-text">
                   <h4>+251-911-427805</h4>
-                  <p>Duis erat leo, aliquam laoreet fringilla quis, pretium vitae dui.</p>
+                  <p>Please feel free to text or call at any time. I would love to hear from you.</p>
                 </div>
               </div>
 
@@ -31,7 +31,7 @@
                 </div>
                 <div class="ci-text">
                   <h4>Addis Ababa</h4>
-                  <p>Duis erat leo, aliquam laoreet fringilla quis, pretium vitae dui.</p>
+                  <p>Bole sub-city <i class="fas fa-circle"></i> Woreda 14 <i class="fas fa-circle"></i> P.O.Box 18800 <i class="fas fa-circle"></i> <br>Ethiopia</p>
                 </div>
               </div>
 
@@ -41,7 +41,7 @@
                 </div>
                 <div class="ci-text">
                   <h4>hello@eyob.tech</h4>
-                  <p>Duis erat leo, aliquam laoreet fringilla quis, pretium vitae dui.</p>
+                  <p>Send me a quick e-mail. I will get back to you instantly.</p>
                 </div>
               </div>
             </div>
