Fix static assets url for fonts

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -59,7 +59,7 @@
 
                 <div class="ci-text">
                   <h4>RESTful API</h4>
-                  <p>I build clean & well-structured RESTful APIs using Python, Django & Flask. My APIs are well-documented in accordance to the OpenAPI 2.0 specification and implement automated tests with a test coverage of at least 80%.</p>
+                  <p>I build clean & well-structured RESTful APIs using Python, Django & Flask. My APIs are properly documented in accordance to the OpenAPI 2.0 specification and implement automated tests with a test coverage of at least 80%.</p>
                 </div>
               </div>
             </div>
