Add a `not-found` angular module

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
-@media only screen and (min-width: 991px) {
-  .page-container {
-    min-height: 100vh;
-    padding-bottom: 90px;
+
+.page-container {
+  min-height: 100vh;
 }
+
+
+@media only screen and (min-width: 991px) {
+    .page-container {
+      min-height: 100vh;
+      padding-bottom: 90px;
+  }
 }
